--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -49,6 +49,7 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>2.2.8-02</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
