added provided scope for JBoss AS deployment

--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -56,6 +56,7 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>2.2.8-02</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
