--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -12,7 +12,7 @@
 	
 	<name>Report Web Module</name>
 
-	<build>
+<!-- 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
@@ -28,7 +28,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 	<dependencies>
 		<!-- PrimeFaces -->
@@ -49,14 +49,12 @@
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>2.2.8-02</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>2.2.8-02</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -78,5 +76,70 @@
 			<artifactId>report-model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- Start of pure web apps setting -->
+
+		<!--  Spring framework  -->
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>4.1.3.RELEASE</version>
+	    </dependency>
+	    <!-- JSR-330 Dependency injection support -->
+	    <dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		
+		<!-- spring web  -->
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-web</artifactId>
+	        <version>4.1.3.RELEASE</version>
+	    </dependency>
+	    
+	    <!-- for override EJB JPA implementation with spring -->
+	    <dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-jpa</artifactId>
+        	<version>1.7.1.RELEASE</version>
+	    </dependency>
+	    
+	    <!-- ejb classes -->
+	    <dependency>
+			<groupId>javax.ejb</groupId>
+			<artifactId>ejb-api</artifactId>
+			<version>3.0</version>
+		</dependency>
+		
+		<!-- cdi API -->
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>1.2</version>
+		</dependency>
+	  
+		<!-- apache common collections -->
+	  	<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		
+		<!-- apache common language -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		
+		<!-- Basic Data Source -->
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+  			<artifactId>commons-dbcp</artifactId>
+  			<version>1.4</version>
+		</dependency>
+	  <!-- End of pure web apps setting -->
 	</dependencies>
 </project>
