--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -141,5 +141,10 @@
   			<version>1.4</version>
 		</dependency>
 	  <!-- End of pure web apps setting -->
+	  <dependency>
+	  	<groupId>org.omnifaces</groupId>
+	  	<artifactId>omnifaces</artifactId>
+	  	<version>1.10</version>
+	  </dependency>
 	</dependencies>
 </project>
