report template module implementation
implementation of report template module for the following layer
- DAO
- domain
- service

--- a/report-features/pom.xml
+++ b/report-features/pom.xml
@@ -12,6 +12,7 @@
 	<name>Report Feature Modules</name>
 	<modules>
 		<module>report-model</module>
+		<module>report-reporttemplate</module>
 	</modules>
 	<dependencies>
 		<dependency>
