--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -77,6 +77,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-reporttemplate</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 		<!-- Start of pure web apps setting -->
 
 		<!--  Spring framework  -->
