Renamed the shared library folder inside ear from APP-INF/lib to lib

--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 							<!-- configuring the ear plugin -->
 							<configuration>
 								<finalName>reporte</finalName>
-								<defaultLibBundleDir>APP-INF/lib</defaultLibBundleDir>
+								<defaultLibBundleDir>lib</defaultLibBundleDir>
 								<skinnyWars>false</skinnyWars>
 								<outputDirectory>deployments</outputDirectory>
 								<modules>
