refactor out the datasource as feature module
- shift datasourece out of model module into a new feature module
"datasource"
- shift persistence.xml out of src/main/resources/META-INF into
/src/test/resources/META-INF to avoid multiple persistence unit with
same name issue, keep the final persistence.xml at web app/EAR level.
those in src/test/META-INF will be used as individual feature module
test case usage.
- add BaseDAOException class that extended by all DAO nature exception,
used for identify DAO nature exception in generic way
- added reportQuery implementation
- added enum to represent java sql type

--- a/report-features/pom.xml
+++ b/report-features/pom.xml
@@ -11,6 +11,7 @@
 	
 	<name>Report Feature Modules</name>
 	<modules>
+		<module>report-datasource</module>
 		<module>report-model</module>
 		<module>report-template</module>
 		<module>report-gen</module>
