Report Generation implementation
- report generation for Cartesian and Pie type Report based on
corresponding Report Template setting

- fixed hashCode logic for PieChartTemplate

--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -83,6 +83,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-gen</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 		<!-- Start of pure web apps setting -->
 
 		<!--  Spring framework  -->
