--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -30,6 +30,17 @@
 		</plugins>
 	</build> -->
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+	            <groupId>org.springframework</groupId>
+	            <artifactId>spring-framework-bom</artifactId>
+	            <version>4.1.3.RELEASE</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<!-- PrimeFaces -->
 		<dependency>
@@ -95,7 +106,6 @@
 		<dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-context</artifactId>
-	        <version>4.1.3.RELEASE</version>
 	    </dependency>
 	    <!-- JSR-330 Dependency injection support -->
 	    <dependency>
@@ -108,7 +118,6 @@
 		<dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-web</artifactId>
-	        <version>4.1.3.RELEASE</version>
 	    </dependency>
 	    
 	    <!-- for override EJB JPA implementation with spring -->
