fixed for Wild fly deployment
1) change report-model packaging from jar to ejb
2) exclude antlr maven dependency as wildfly is using newer hibernate
that referencing antlr3 causing class cast exception issue
3) remove open web bean listener from web.xml as wildfly come with CDI
container unlike tomee which need additional CDI container listener 
4) configure the contextRoot to reporte

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
 									<webModule>
 										<groupId>reporte</groupId>
 										<artifactId>report-web</artifactId>
+										<contextRoot>reporte</contextRoot>
 									</webModule>
 									<ejbModule>
 										<groupId>reporte</groupId>
