--- a/report-common/pom.xml
+++ b/report-common/pom.xml
@@ -16,6 +16,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.2.16.Final</version>
+			<exclusions>
+				<exclusion>
+         			<groupId>antlr</groupId>
+         			<artifactId>antlr</artifactId>
+		      </exclusion>
+		    </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
