--- a/report-common/pom.xml
+++ b/report-common/pom.xml
@@ -34,5 +34,11 @@
   			<artifactId>commons-dbcp</artifactId>
   			<version>1.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.jsqlparser</groupId>
+			<artifactId>jsqlparser</artifactId>
+			<version>0.9.2</version>
+		</dependency>
 	</dependencies>
 </project>
