--- a/report-ear/pom.xml
+++ b/report-ear/pom.xml
@@ -37,6 +37,20 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
+		
+		<!-- <dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-webdemo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>war</type>
+		</dependency> -->
+
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-rest</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
 		<!-- external libraries <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
 			<version>5.1.6</version> </dependency> -->
 	</dependencies>
