added REST API implementation for report template (connector) and generation
- rename REST API end point class to remove prefix "ReportE"
- implements REST API for template and generation
- Remove redundant maven dependency from web module.
- convert report-gen module to ejb (session bean) module

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 		<module>report-web</module>
 		<module>report-ear</module>
 		<module>report-rest</module>
-		<!-- <module>report-webdemo</module> -->
 	</modules>
 
 	<dependencies>
@@ -151,20 +150,14 @@
 								<modules>
 									<webModule>
 										<groupId>reporte</groupId>
+										<artifactId>report-rest</artifactId>
+										<contextRoot>reporte-rest</contextRoot>
+									</webModule> 
+									<webModule>
+										<groupId>reporte</groupId>
 										<artifactId>report-web</artifactId>
 										<contextRoot>reporte</contextRoot>
 									</webModule>
-									<!-- <webModule>
-										<groupId>reporte</groupId>
-										<artifactId>report-webdemo</artifactId>
-										<contextRoot>reportedemo</contextRoot>
-									</webModule> -->
-									<ejbModule>
-										<groupId>reporte</groupId>
-										<artifactId>report-model</artifactId>
-									</ejbModule>
-									<!-- extra libraries into lib directory <jarModule> <groupId>mysql</groupId> 
-										<artifactId>mysql-connector-java</artifactId> </jarModule> -->
 								</modules>
 							</configuration>
 						</plugin>
