--- a/report-features/pom.xml
+++ b/report-features/pom.xml
@@ -21,6 +21,7 @@
 			<groupId>reporte</groupId>
 			<artifactId>report-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- EJB Test -->
