--- a/report-web/pom.xml
+++ b/report-web/pom.xml
@@ -12,24 +12,6 @@
 	
 	<name>Report Web Module</name>
 
-<!-- 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<packagingExcludes>
-						WEB-INF/lib/hibernate*.jar,
-						WEB-INF/lib/antlr*.jar,
-						WEB-INF/lib/javassist*.jar,
-						WEB-INF/lib/jboss*.jar,
-						WEB-INF/lib/dom4j*.jar
-					</packagingExcludes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build> -->
-
 	<dependencies>
 		<!-- PrimeFaces -->
 		<dependency>
@@ -78,96 +60,38 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-template</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-model</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-datasource</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>reporte</groupId>
+			<artifactId>report-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 		
-		<!-- Start of pure web apps setting -->
+		<!-- log4j2 web container support for runtime -->
+		<!-- <dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-web</artifactId>
+			<scope>runtime</scope>
+		</dependency> -->
 
-		<!--  Spring framework  -->
-		<!-- <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-context</artifactId>
-	        <version>4.1.3.RELEASE</version>
-	    </dependency> -->
-	    <!-- JSR-330 Dependency injection support -->
-	    <!-- <dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1</version>
-		</dependency> -->
-		
-		<!-- spring web  -->
-		<!-- <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-web</artifactId>
-	        <version>4.1.3.RELEASE</version>
-	    </dependency> -->
-	    
-	    <!-- for override EJB JPA implementation with spring -->
-	    <!-- <dependency>
-	        <groupId>org.springframework.data</groupId>
-	        <artifactId>spring-data-jpa</artifactId>
-        	<version>1.7.1.RELEASE</version>
-	    </dependency> -->
-	    
-	    <!-- ejb classes -->
-	    <!-- <dependency>
-			<groupId>javax.ejb</groupId>
-			<artifactId>ejb-api</artifactId>
-			<version>3.0</version>
-		</dependency> -->
-		
-		<!-- cdi API -->
-		<!-- <dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
-			<version>1.2</version>
-		</dependency> -->
-	  
-		<!-- apache common collections -->
-	  	<!-- <dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
-		</dependency> -->
-		
-		<!-- apache common language -->
-		<!-- <dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
-		</dependency> -->
-		
-		<!-- Basic Data Source -->
-		<!-- <dependency>
-			<groupId>commons-dbcp</groupId>
-  			<artifactId>commons-dbcp</artifactId>
-  			<version>1.4</version>
-		</dependency> -->
-	  <!-- End of pure web apps setting -->
-	  
-	  	<!-- Start of explicitly exclude as already present in the common jar -->
-		<!-- Apache Commons -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
-			<scope>provided</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
-			<scope>provided</scope>
-		</dependency>
-	  
-	  	<!-- Slf4j Logger -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
-			<scope>provided</scope>
-		</dependency>
-	  	<!-- End of explicitly exclude as already present in the common jar -->
 	  
 	  <dependency>
 	  	<groupId>org.omnifaces</groupId>
