temporary comment off report-web module for testing openshift wildfly not enough thread issue

--- a/report-ear/pom.xml
+++ b/report-ear/pom.xml
@@ -33,12 +33,12 @@
 		</dependency>
 
 		<!-- to be removed later -->		
-		<dependency>
+		<!-- <dependency>
 			<groupId>reporte</groupId>
 			<artifactId>report-web</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>war</type>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
 			<groupId>reporte</groupId>
