--- a/report-features/pom.xml
+++ b/report-features/pom.xml
@@ -15,6 +15,8 @@
 		<module>report-model</module>
 		<module>report-template</module>
 		<module>report-gen</module>
+		<module>report-schedule</module>
+		<module>report-publish</module>
 	</modules>
 	<dependencies>
 		<dependency>
