--- a/report-rest/pom.xml
+++ b/report-rest/pom.xml
@@ -46,6 +46,12 @@
 		</dependency>
 		<dependency>
 			<groupId>reporte</groupId>
+			<artifactId>report-publish</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>reporte</groupId>
 			<artifactId>report-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
