--- a/report-ear/pom.xml
+++ b/report-ear/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>log4j-core</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-web</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		
 		<!-- lmax disruptor for log4j2 async logger -->		
 		<dependency>
