fixed DAOLogger that silently skip proceed of intercept method if not implement LogInterceptable interface (should continue proceed but don't perform the logging)
- initial snap shot feature check in

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,10 @@
 										<groupId>reportbay</groupId>
 										<artifactId>report-gen</artifactId>
 									</ejbModule>
+									<ejbModule>
+										<groupId>reportbay</groupId>
+										<artifactId>report-snapshot</artifactId>
+									</ejbModule>
 									<jarModule>
 										<groupId>reportbay</groupId>
 										<artifactId>report-common</artifactId>
@@ -233,6 +237,10 @@
 									<ejbModule>
 										<groupId>reportbay</groupId>
 										<artifactId>report-gen</artifactId>
+									</ejbModule>
+									<ejbModule>
+										<groupId>reportbay</groupId>
+										<artifactId>report-snapshot</artifactId>
 									</ejbModule>
 									<jarModule>
 										<groupId>reportbay</groupId>
