--- a/report-features/pom.xml
+++ b/report-features/pom.xml
@@ -16,6 +16,7 @@
 		<module>report-template</module>
 		<module>report-gen</module>
 		<!-- <module>report-schedule</module> -->
+		<module>report-snapshot</module>
 		<module>report-publish</module>
 	</modules>
 	<dependencies>
